[package]
name = "graphlog-proto"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
omnipaxos = { git = "https://github.com/haraldng/omnipaxos" }
openssl = { version = "0.10", features = ["vendored"] }
zmq = "0.10.0"
clap = { version = "4.0", features = ["derive"] }
