[package]
name = "graphlog-proto"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
openssl = { version = "0.10", features = ["vendored"] }
clap = { version = "4.0", features = ["derive"] }
chrono = {version = "0.4.41", features = ["serde"] }
yaml-rust2 = "0.10.3"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
toml = "0.8"
curl = "0.4.48"
dialoguer = "0.11.0"
# Copied this from key-value store example
axum = "0.8.4"
tokio = { version = "1.47", features = ["full"] }
tower = { version = "0.5.2", features = ["util", "timeout", "load-shed", "limit"] }
tower-http = { version = "0.6.1", features = [
    "add-extension",
    "auth",
    "compression-full",
    "limit",
    "trace",
] }

